--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -3383,4 +3383,7 @@
     <string name="home_controls_dream_label">Home Controls</string>
     <!-- Description for home control panel [CHAR LIMIT=67] -->
     <string name="home_controls_dream_description">Quickly access your home controls as a screensaver</string>
+
+    <!-- AOD QS tile -->
+    <string name="quick_settings_aod_secondary_label_on_at_charge">On at charge</string>
 </resources>
